js262/test/language/module-code/parse-err-decl-pos-export-class-expr-meth.js


/*---
description: Expression cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

(class { method() { export default null; } });
